version/0.36/_sources/api/solver/_autosummary/settings/fan_1_child.rst.txt
:orphan:

.. _fan_1_child:

fan_child
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.fan_1_child
    :show-inheritance:

.. rubric:: Attributes

==================================================================   ==========================================================

Attribute                                                                                                               Summary

==================================================================   ==========================================================
:ref:`name <name_4>`                                                                                        Name of the object.

:ref:`locations <locations_2>`                                                                             Input location name.

:ref:`pressure_jump_specification <pressure_jump_specification>`                          Pressure jump specification settings.

:ref:`swirl_velocity_specification <swirl_velocity_specification>`                       Swirl Velocity specification settings.

:ref:`discrete_phase <discrete_phase_2>`                                                               Discrete Phase settings.

:ref:`geometry <geometry_6>`                                             Allows to change geometry model variables or settings.

:ref:`phase <phase_5>`                                                                       Domain name to define settings on.

==================================================================   ==========================================================

.. rubric:: Methods

==================================   ===============================================

Method                                                                       Summary

==================================   ===============================================
:ref:`display <display_4>`                                   Display physics object.

:ref:`split <split_1>`                   Input boundary and location names to split.

:ref:`set_location <set_location>`                              Input location name.

:ref:`set_type <set_type_3>`                      Change the type for this boundary.

==================================   ===============================================

.. rubric:: Included in:

====================   ================

Parent                          Summary

====================   ================
:ref:`fan_1 <fan_1>`       Thread-type.

====================   ================

